--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-A java runtime diagnostic tool like Btrace. And provides many features btrace not support.More information in the wiki.
+A java runtime diagnostic tool like Btrace. And provides many features btrace not support.More information see http://knife-doc.cloudfoundry.com/.
