--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 A java runtime diagnostic tool like Btrace. And provides many features btrace not support.More information see http://knifedoc.duapp.com/ .
 
-download https://code.google.com/p/knife/downloads/list
+download http://sourceforge.net/projects/knife-download/files/
