--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,12 @@
 1. 支持perf命令，用于显示热点方法调用
 2. 所有操作信息会写入主目录里的knife.log，每次重新启动后会清空这个日志
 
+0.9.0
+1. 支持perf命令修改为thread命令，能够通过采样的方式查看热点线程。
+2. 增加heap命令，通过采样的方式查看内存占用和增量。
+3. 修复带参数命令（类似heap -i -t 10）后面必须加个空格的bug
+4. 支持持续刷新屏幕的命令（类似heap）
+
 
 
 
