--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+wiki:
+https://deepwiki.com/chenjw/knife
+
+
 A java runtime diagnostic tool like Btrace. And provides many features btrace not support.
 
 document
